style.css
:root {
  --color-bg: #2fffdc;
  --color-text-main: white;
  --color-text-header: black;
  --color-primary: #FFFF00;
  --wrapper-height: 87vh;
  --image-max-width: 300px;
  --image-margin: 3rem;
  --font-family: "HK Grotesk";
  --font-family-header: "HK Grotesk";
}

* {
  box-sizing: border-box;
}

[hidden] {
  display: none !important;
}

@font-face {
  font-family: HK Grotesk;
  src: url("HKGrotesk-Regular.otf") format("opentype");
}

@font-face {
  font-family: HK Grotesk;
  font-weight: bold;
  src: url("HKGrotesk-Bold.otf") format("opentype");
}

.btn--remix {
  font-family: HK Grotesk;
  padding: 0.75rem 1rem;
  font-size: 1.1rem;
  line-height: 1rem;
  font-weight: 500;
  height: 2.75rem;
  align-items: center;
  cursor: pointer;
  background: #FFFFFF;
  border: 1px solid #000000;
  box-sizing: border-box;
  border-radius: 4px;
  text-decoration: none;
  color: #000;
  white-space: nowrap;
  margin-left: auto;
}

.btn--remix img {
  margin-right: 0.5rem;
}

.btn--remix:hover {
  background-color: #D0FFF1;
}

.footer {
  display: flex;
  justify-content: space-between;
  margin: 1rem auto 0;
  padding: 1rem 0 0.75rem 0;
  width: 100%;
  flex-wrap: wrap;
  border-top: 4px solid #fff;
}

.footer a:not(.btn--remix):link,
a:not(.btn--remix):visited {
  font-family: HK Grotesk;
  font-style: normal;
  font-weight: normal;
  font-size: 1.1rem;
  color: #000;
  text-decoration: none;
  border-style: none;
}

.footer a:hover {
  background: var(--color-primary);
}

.footer .links {
  padding: 0.5rem 1rem 1.5rem;
  white-space: nowrap;
}

.divider {
  padding: 0 1rem;
}

body {
  font-family: HK Grotesk;
  background: linear-gradient(to bottom, #deff5f, #50c8ff);
  height: 100vh;
}

.wrapper {
  min-height: var(--wrapper-height);
  display: grid;
  place-items: center;
  margin: 0 1rem;
}

.content {
  max-width: 600px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.title {
  color: var(--color-text-header);
  font-family: HK Grotesk;
  font-style: normal;
  font-weight: bold;
  font-size: 100px;
  line-height: 105%;
  margin: 0;
  line-height: 80px;
}

@media (max-width: 600px) {
  .title {
    font-size: 62px;
    line-height: 50px;
  }
}

.illustration {
  max-width: 100%;
  max-height: var(--image-max-width);
  margin-top: var(--image-margin);
  position: absolute;
  bottom: 0;
  right: 0;
}

.instructions {
  margin: 1rem auto 0;
}

button,
input {
  font-family: inherit;
  font-size: 100%;
  background: #FFFFFF;
  border: 1px solid #000000;
  box-sizing: border-box;
  border-radius: 4px;
  padding: 0.5rem 1rem;
  transition: 500ms;
}

h2 {
  color: var(--color-text-header);
}

.illustration:active {
  transform: translateY(5px);
}

.dipped {
  transform: translateY(5px);
}

.fileopener {
  cursor: pointer;
  font-weight: bold;
  border-bottom: 3px solid var(--color-primary);
  color: var(--color-secondary);
}

.fileopener:hover {
  border-bottom: 3px solid var(--color-secondary);
}

a {
  color: white;
}

